modules/GKE/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isbn-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /user_management
        pathType: Prefix
        backend:
          service:
            name: user_management_service
            port:
              number: 80
  - host: ""
    http:
      paths:
      - path: /transaction
        pathType: Prefix
        backend:
          service:
            name: transactions_service
            port:
              number: 80
